# virtual_filesystem

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
VFS_client/: __init__.py
VFS_client/cli/: __init__.py  client.py  client_cmd.py  commands.py
VFS_client/src/: __init__.py  core.py
VFS_client/src/modules/: __init__.py  node.py
VFS_client/src/private/: __init__.py  helper_methods.py
VFS_client/test/: test_directories.py  test_files.py
main/: core.py
main/modules/: node.py
main/private/: helper_methods.py
test/: test_directories.py  test_files.py
